pkg/i2gw/testdata/input-file.json
{
    "apiVersion": "v1",
    "kind": "List",
    "items": [
        {
            "apiVersion": "apps/v1",
            "kind": "Deployment",
            "metadata": {
                "name": "nginx-deployment"
            },
            "spec": {
                "replicas": 3,
                "selector": {
                    "matchLabels": {
                        "app": "nginx"
                    }
                },
                "template": {
                    "metadata": {
                        "labels": {
                            "app": "nginx"
                        }
                    },
                    "spec": {
                        "containers": [
                            {
                                "name": "nginx",
                                "image": "nginx:1.14.2",
                                "ports": [
                                    {
                                        "containerPort": 80
                                    }
                                ]
                            }
                        ]
                    }
                }
            }
        },
        {
            "apiVersion": "v1",
            "kind": "Pod",
            "metadata": {
                "name": "nginx"
            },
            "spec": {
                "containers": [
                    {
                        "name": "nginx",
                        "image": "nginx:1.14.2",
                        "ports": [
                            {
                                "containerPort": 80
                            }
                        ]
                    }
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "Ingress",
            "metadata": {
                "name": "ingress1"
            },
            "spec": {
                "ingressClassName": "ingress1-with-test1-backend-on-443",
                "rules": [
                    {
                        "http": {
                            "paths": [
                                {
                                    "path": "/test-1",
                                    "pathType": "Prefix",
                                    "backend": {
                                        "service": {
                                            "name": "test1",
                                            "port": {
                                                "number": 443
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "networking.k8s.io/v1",
            "kind": "Ingress",
            "metadata": {
                "name": "ingress2"
            },
            "spec": {
                "ingressClassName": "ingress2-with-test2-backend-on-80",
                "rules": [
                    {
                        "http": {
                            "paths": [
                                {
                                    "path": "/test-2",
                                    "pathType": "Prefix",
                                    "backend": {
                                        "service": {
                                            "name": "test2",
                                            "port": {
                                                "number": 80
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    }
                ]
            }
        }
    ]
}
